<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/recipe_name" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_recipe_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_recipe_name"
                android:inputType="textCapWords"
                android:textIsSelectable="true" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="Servings"
            android:paddingRight="70dp"/>


        <!-- Servings field -->
        <EditText
            android:id="@+id/edit_recipe_servings"
            style="@style/EditorFieldStyle"
            android:hint="@string/hint_recipe_servings"
            android:inputType="textCapWords"
            android:textIsSelectable="true" />

    </LinearLayout>

    <!-- Category category -->
    <LinearLayout
        android:id="@+id/container_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/recipe_category" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Category drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

    <!-- Yield category -->
    <LinearLayout
        android:id="@+id/container_yield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/recipe_yield" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Weight field -->
            <EditText
                android:id="@+id/edit_recipe_yield"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_recipe_yield"
                android:inputType="number"
                android:textIsSelectable="true" />

            <!-- Units for weight (kg) -->
            <TextView
                android:id="@+id/label_yield_units"
                style="@style/EditorUnitsStyle"
                android:text="@string/unit_recipe_yield" />
        </RelativeLayout>
    </LinearLayout>

    <!-- Label -->
    <!--<TextView-->
    <!--android:text="PREPARATION"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:gravity="center_horizontal"-->
    <!--android:paddingTop="8dp"-->
    <!--android:paddingBottom="4dp"-->
    <!--/>-->

    <EditText
        android:id="@+id/edit_recipe_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="top|left"
        android:hint="Enter preparation instructions here."
        android:inputType="textMultiLine"
        android:paddingTop="24dp"
        android:scrollbars="vertical"
        android:textIsSelectable="true" />


</LinearLayout>
